testsuite/tests/overloadedstrings/should_fail/all.T
test('T25926', normal, compile, ['-fdefer-type-errors'])
test('T27124', normal, compile, ['-fdefer-type-errors'])
